--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.example</groupId>
   <artifactId>demo</artifactId>
@@ -21,6 +23,30 @@
     <jacoco.unit-tests.limit.method-complexity>5</jacoco.unit-tests.limit.method-complexity>
   </properties>
   <dependencies>
+    <dependency>
+      <groupId>rs2xml</groupId>
+      <artifactId>rs2xml</artifactId>
+      <scope>system</scope>
+      <version>1.0</version>
+      <systemPath>/home/maniac/Desktop/electricity/lib/rs2xml.jar</systemPath>
+    </dependency>
+
+    <dependency>
+      <groupId>io.github.shaohuizhe</groupId>
+      <artifactId>net</artifactId>
+      <version>10.1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.sonarsource.xml</groupId>
+      <artifactId>xml</artifactId>
+      <version>2.7.0.3820</version>
+      <type>pom</type>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.jakarta.rs</groupId>
+      <artifactId>jackson-jakarta-rs-base</artifactId>
+      <version>2.14.2</version>
+    </dependency>
 
     <dependency>
       <groupId>mysql</groupId>
@@ -85,12 +111,12 @@
           <skip>${skipTests}</skip>
         </configuration>
         <executions>
-        <execution>
-          <id>checkstyle</id>
-          <phase>validate</phase>
-          <goals>
-            <goal>check</goal>
-          </goals>
+          <execution>
+            <id>checkstyle</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
           </execution>
         </executions>
       </plugin>
